Fix the bug with overflow and scrolling

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 html,body{
-    height: 100vh;}
+    height: 100vh;
+}
+
+body{
+    background-color: #1B2430;
+}
 
 body{
     margin: 0;
@@ -17,12 +22,6 @@ header{
     padding: 30px 0;
     font-size: 2.5rem;
     text-transform:uppercase;
-}
-
-main{
-    background-color: #1B2430;
-    height: 100%;
-    padding-top: 100px;
 }
 
 .cards-wrapper{
@@ -61,9 +60,9 @@ main{
     width: 500px;
     border-radius: 10px;
     margin: 0 auto;
-    box-shadow: black 0 40px 20px -30px;
-
+    box-shadow: black 0 40px 20px -30px;    
     font-size: 3rem;
+    margin-top: 100px;
 }
 
 .scoreboard img{
